<resources>
    <string name="app_name">DebtsRecorder</string>

    <string name="debtList_tv_emptyList">No records made yet</string>
    <string name="debtList_bAdd">New entry</string>
    <string name="newRecord_rbFrom">Get money from…</string>
    <string name="newRecord_rbTo">Return money to…</string>
    <string name="newRecord_editSum">Sum in rubbles</string>
    <string name="newRecord_bNewClient">New client</string>
    <string name="newRecord_editDescription">Description (recommended)</string>
    <string name="newRecord_bSubmit">Submit</string>
    <string name="newRecord_tvTitle">New debt entry</string>
    <string name="newRecord_editDestDate">Debt repayment period/date (optional)</string>
    <string name="newRecord_spin_hint_empty">No clients found</string>
    <string name="newRecord_spin_hint_select">Select client</string>
    <string name="newRecord_tvClient">Client:</string>
    <string name="error_clientIsNull">Please, specify your client</string>
    <string name="error_incorrectSum">Please, input sum of payment</string>
    <string name="newRecord_tvNoClients">No clients data found</string>
    <string name="newRecord_dialog_tvContent">You didn\'t specified description. If you specify it, it will be easier to remember what does this record mean. Continue?</string>
    <string name="newRecord_dialog_bNo">No</string>
    <string name="newRecord_dialog_bYes">Yes</string>
    <string name="newRecord_dialog_title">Alert</string>
    <string name="debtItem_tvDestDate">Repayment date wasn\'t specified</string>
    <string name="newClient_title">New client</string>
    <string name="newClient_editFirstName">First name</string>
    <string name="newClient_editLastName">Last name</string>
    <string name="newClient_bSubmit">Submit</string>
    <string name="error_unknownError">Unknown error</string>
    <string name="error_firstNameIsNull">Please, specify first name</string>
    <string name="error_lastNameIsNull">Please, specify last name</string>
    <string name="error_clientExists">Client already exists</string>
    <string name="error_nameContainsSpaces">First name or last name shouldn\'t contain spaces</string>
    <string name="newRecord_message_clientAdded">Client data added successfully</string>
    <string name="debtItem_PAY">Pay to</string>
    <string name="debtItem_GET">Get from</string>
    <string name="debtItem_tvSum_ph">%s rub - %s</string>
    <string name="debtItem_tvDescription">Description wasn\'t specified</string>
    <string name="debtItem_tvDestDate_ph">Repayment: %s</string>
    <string name="debtItem_tvDescription_ph">Description: %s</string>
    <string name="debtItem_popup_edit">Edit</string>
    <string name="debtItem_popup_remove">Remove</string>
    <string name="dialogRemove_tvContent">Are you sure you want to delete this entry?</string>
    <string name="dialogRemove_bNo">No</string>
    <string name="dialogRemove_bYes">Yes</string>
    <string name="dialogRemove_title">Remove entry</string>
    <string name="dlMessage_removeFail">Removing failed</string>
    <string name="dlMessage_removeSuccess">Entry removed successfully</string>
    <string name="newRecord_tvTitle_edit">Edit record</string>
    <string name="dlMessage_editSuccess">Entry modified successfully</string>
    <string name="main_bNewRecord">Add new debt entry</string>
    <string name="main_bClients">Show debtors info</string>
    <string name="main_bAllRecords">Show all debt entries info</string>
    <string name="clientItem_tvSum_ph_pay">%s rub to pay</string>
    <string name="clientItem_tvSum_ph_no">%s rub</string>
    <string name="clientItem_tvSum_ph_get">%s rub to get</string>
    <string name="clients_tvEmptyList">No clients yet</string>
    <string name="clientItem_tvRecordsCount_ph">%s entries</string>
    <string name="clientItem_tvRecordsCount_ph_empty">%s  entries - cleanup recommended</string>
    <string name="clientItem_tvRecordsCount_ph_one">%s entry</string>
    <string name="clientItem_popup_rename">Rename</string>
    <string name="clientItem_popup_cleanup">Cleanup debts history</string>
    <string name="clientItem_popup_remove">Remove</string>
    <string name="clientItem_popup_records">Show all debts</string>
    <string name="clRec_tvHeader_ph">%s\'s records:</string>
    <string name="clRec_tvEmptyList">No records yet</string>
    <string name="debtItem_PAY_noClient">Pay</string>
    <string name="debtItem_GET_noClient">Get</string>
    <string name="confirmCI_bYes">Yes</string>
    <string name="confirmCI_bNo">No</string>
    <string name="confirmCI_cleanup_content">Are you sure you want to cleanup all the debt entries for this client?</string>
    <string name="confirmCI_remove_content">Are you sure you want to remove this client and all of their debt entries?</string>
    <string name="confirmCI_title">Alert</string>
    <string name="ve_renaming_firstNameIsNull">Please, specify new first name</string>
    <string name="ve_renaming_lastNameIsNull">Please, specify new last name</string>
    <string name="ve_renaming_spaces">Client\'s first name or last name shouldn\'t contain spaces</string>
    <string name="ve_renaming_clientExists">Such name is already occupied</string>
    <string name="ve_renaming_unknownError">Unknown error has occurred. Client wasn\'t renamed</string>
    <string name="renameClient_title">Rename client</string>
    <string name="clMessage_clientRenamed">Client renamed successfully</string>
    <string name="clMessage_clientRemoved">Client removed successfully</string>
    <string name="clMessage_cleanup">Client\'s debt entries removed successfully</string>
    <string name="clMessage_unknownError">Unknown error has occurred. Data wasn\'t changed</string>
    <string name="mainMessage_recordCreated">Debt entry created successfully</string>
    <string name="main_tvMessage_ph">You have %s debtors and %s debts</string>
    <string name="clients_bNewClient">New client</string>
    <string name="clMessage_clientCreated">Client created successfully</string>
    <string name="clientItem_tvRecordsCount_ph_twoThreeFour">%s entries</string>
</resources>