<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".feature.debts.ui.ConfirmationRemoveActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialogRemove_tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/style_BaseContent.PlainText"
        android:text="@string/dialogRemove_tvContent"/>

    <Button
        android:id="@+id/dialogRemove_bNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialogRemove_bYes"
        app:layout_constraintTop_toBottomOf="@id/dialogRemove_tvContent"
        android:text="@string/dialogRemove_bNo"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/dialogRemove_bYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dialogRemove_bNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogRemove_tvContent"
        android:text="@string/dialogRemove_bYes"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>